Fix by comments

--- a/index.html
+++ b/index.html
@@ -10,6 +10,25 @@
 </head>
 
 <body class="page-body">
+  <div id="modal" class="feedback-form-wrapper">
+    <form class="feedback-form" action="https://echo.htmlacademy.ru/courses" method="post">
+      <button class="btn-feedback-close">
+        <svg onclick='document.getElementById("modal").style.display="none"' width="18" height="17" viewBox="0 0 18 17"
+          fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M18 1.4175L16.4885 0L8.99468 7.07747L1.50089 0L0 1.4175L7.49379 8.49497L0 15.5724L1.50089 17L8.99468 9.92253L16.4885 17L18 15.5724L10.5062 8.49497L18 1.4175Z" fill="#231F20" />
+        </svg>
+      </button>
+      <h2 class="visually-hidden"> Форма обратной связи </h2>
+      <h3 class="feedback-form-title">Мы обязательно вам ответим!</h3>
+      <label for="user-name" class="visually-hidden"> Имя и фамилия</label>
+      <input class="feedback-form-input" type="text" name="name" id="user-name" placeholder="Имя Фамилия" required>
+      <label for="user-email" class="visually-hidden">Электронная почта</label>
+      <input class="feedback-form-input" type="email" id="user-email" name="email" placeholder="email@example.com" required>
+      <label for="user-text" class="visually-hidden">Дополнительная информация</label>
+      <textarea class="feedback-form-text" id="user-text" name="text" rows="7" placeholder="В свободной форме" required></textarea>
+      <button class="button btn-feedback" type="submit">Отправить</button>
+    </form>
+  </div>
   <header class="main-header container">
     <nav class="main-nav">
       <a class="main-logo" href="index.html" >
@@ -49,9 +68,6 @@
       <h2 class="visually-hidden">Форма поиска</h2>
       <a class="btn-search" href="#">
         <span class="visually-hidden">Поиск</span>
-        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M16 14.6652L11.0785 9.73294C11.9827 8.48188 12.3826 6.93501 12.1984 5.40134C12.0141 3.86767 11.2594 2.4601 10.0848 1.45982C8.91022 0.45954 7.40233 -0.0598191 5.86234 0.00548954C4.32234 0.0707982 2.86363 0.715967 1.77757 1.81212C0.691516 2.90827 0.0580813 4.3747 0.0038002 5.91849C-0.050481 7.46228 0.478388 8.96976 1.48476 10.1398C2.49113 11.3098 3.90092 12.0563 5.43251 12.2301C6.96409 12.4039 8.50472 11.9922 9.74663 11.0772L14.6586 16L16 14.6652ZM6.08152 10.3767C5.24079 10.3767 4.41895 10.1268 3.71991 9.65874C3.02087 9.19063 2.47604 8.5253 2.15431 7.74687C1.83258 6.96844 1.7484 6.11188 1.91241 5.28551C2.07643 4.45913 2.48128 3.70006 3.07576 3.10427C3.67024 2.50849 4.42766 2.10276 5.25223 1.93838C6.0768 1.77401 6.93149 1.85837 7.70822 2.1808C8.48495 2.50324 9.14883 3.04927 9.61591 3.74983C10.083 4.4504 10.3323 5.27404 10.3323 6.11661C10.3298 7.24568 9.88115 8.3278 9.08451 9.12618C8.28788 9.92456 7.20813 10.3742 6.08152 10.3767Z" fill="white" />
-        </svg>
       </a>
       <form class="popup search-form" action="https://echo.htmlacademy.ru/courses" method="post">
         <label class="visually-hidden" for="search" >Строка поиска</label>
@@ -62,10 +78,7 @@
     <section class="form-login">
       <h2 class="visually-hidden">Форма входа</h2>
       <a class="btn-login" href="#">
-        <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M6.04 14.88L12.96 9.5L6.04 4.13V7.04H0V11.96H6.04V14.88Z" fill="white" />
-          <path d="M18 0H5C4.46957 0 3.96086 0.210714 3.58579 0.585786C3.21071 0.960859 3 1.46957 3 2V4H5V2H18V17H5V15H3V17C3 17.5304 3.21071 18.0391 3.58579 18.4142C3.96086 18.7893 4.46957 19 5 19H18C18.5304 19 19.0391 18.7893 19.4142 18.4142C19.7893 18.0391 20 17.5304 20 17V2C20 1.46957 19.7893 0.960859 19.4142 0.585786C19.0391 0.210714 18.5304 0 18 0Z" fill="white" />
-        </svg>
+        <div class="btn-login-img"></div>
         <span>Вход</span>
       </a>
 
@@ -165,7 +178,7 @@
             <p>310 &#8381;<span>/кг</span></p>
           </div>
           <h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
-          <a class="button" href="#">Быстрый просмотр</a>
+          <a class="button btn-ice" href="#">Быстрый просмотр</a>
         </li>
         <li class="catalog-item">
           <div class="catalog-item-ice catalog-item-coffee">
@@ -173,7 +186,7 @@
             <p>380 &#8381;<span>/кг</span></p>
           </div>
           <h3>Сливочно-кофейное с кусочками шоколада</h3>
-          <a class="button" href="#">Быстрый просмотр</a>
+          <a class="button btn-ice" href="#">Быстрый просмотр</a>
         </li>
         <li class="catalog-item">
           <div class="catalog-item-ice catalog-item-strawberry">
@@ -181,7 +194,7 @@
             <p>355 &#8381;<span>/кг</span></p>
           </div>
           <h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
-          <a class="button" href="#">Быстрый просмотр</a>
+          <a class="button btn-ice" href="#">Быстрый просмотр</a>
         </li>
         <li class="catalog-item">
           <div class="catalog-item-ice catalog-item-brulee">
@@ -189,7 +202,7 @@
             <p>415 &#8381;<span>/кг</span></p>
           </div>
           <h3>Сливочное крем-брюле с карамельной подливкой</h3>
-          <a class="button" href="#">Быстрый просмотр</a>
+          <a class="button btn-ice" href="#">Быстрый просмотр</a>
         </li>
       </ul>
     </section>
@@ -200,25 +213,31 @@
         собственного проиводства на развес
       </h2>
       <ul class="advantages-list">
-        <li class="advantages-item ice">
-          Все наше мороженое изготавливается на собственном производстве, с
-          использованием современного оборудования и проверенных временем
-          технологий.
+        <li class="advantages-item">
+          <div class="ice"></div>
+          <p>Все наше мороженое изготавливается на собственном производстве, с
+            использованием современного оборудования и проверенных временем
+            технологий.
+          </p>
         </li>
-        <li class="advantages-item cow">
-          Закупка ингредиентов производится только у проверенных фермерских
-          хозяйств и компаний, с которыми нас связывает долговременное
-          сотрудничество.
+        <li class="advantages-item">
+          <div class="cow"></div>
+          <p>Закупка ингредиентов производится только у проверенных фермерских
+            хозяйств и компаний, с которыми нас связывает долговременное
+            сотрудничество.</p>
         </li>
-        <li class="advantages-item leaf">
-          Для приготовления мороженого используются настоящие сливки и молоко
-          высочайшего качества. Все дополнительные ингредиенты и добавки
-          произведены из натурального, экологически чистого сырья.
+        <li class="advantages-item">
+          <div class="leaf"></div>
+          <p> Для приготовления мороженого используются настоящие сливки и молоко
+            высочайшего качества. Все дополнительные ингредиенты и добавки
+            произведены из натурального, экологически чистого сырья.</p>
+
         </li>
-        <li class="advantages-item thermometer">
-          Доставка нашего мороженного до заказчиков осуществляется в
-          специальном термопаке, который не дает мороженому растаять в пути и
-          позволяет сохранить превосходный вкус.
+        <li class="advantages-item">
+          <div class="thermometer"></div>
+          <p> Доставка нашего мороженного до заказчиков осуществляется в
+            специальном термопаке, который не дает мороженому растаять в пути и
+            позволяет сохранить превосходный вкус.</p>
         </li>
       </ul>
     </section>
@@ -342,17 +361,6 @@
         © 2019
       </p>
     </section>
-    <form class="feedback-form" action="https://echo.htmlacademy.ru/courses" method="post">
-      <h2 class="visually-hidden"> Форма обратной связи </h2>
-      <h3 class="feedback-form-title">Мы обязательно вам ответим!</h3>
-      <label for="user-name" class="visually-hidden"> Имя и фамилия</label>
-      <input class="feedback-form-user" type="text" name="name" id="user-name" placeholder="Имя Фамилия" required>
-      <label for="user-email" class="visually-hidden">Электронная почта</label>
-      <input class="feedback-form-email" type="email" id="user-email" name="email" placeholder="email@example.com" required>
-      <label for="user-text" class="visually-hidden">Дополнительная информация</label>
-      <textarea class="feedback-form-text" id="user-text" name="text" rows="7" placeholder="В свободной форме" required></textarea>
-      <button class="button btn-feedback" type="submit">Отправить</button>
-    </form>
   </footer>
 </body>
 
