--- a/catalog.html
+++ b/catalog.html
@@ -19,19 +19,19 @@
         <li>
           <a class="btn-catalog" href="catalog.html"> Каталог</a>
           <ul class="nav-inner-list">
-            <li>
+            <li class="nav-item-new">
               <a href="#">Новинки</a>
             </li>
-            <li>
+            <li class="nav-inner-item">
               <a href="#">Сливочное</a>
             </li>
-            <li>
+            <li class="nav-inner-item">
               <a href="#">Щербеты</a>
             </li>
-            <li>
+            <li class="nav-inner-item" >
               <a href="#">Фруктовый лед</a>
             </li>
-            <li>
+            <li class="nav-inner-item">
               <a href="#">Мелорин</a>
             </li>
           </ul>
@@ -49,9 +49,6 @@
       <h2 class="visually-hidden">Форма поиска</h2>
       <a class="btn-search" href="#">
         <span class="visually-hidden">Поиск</span>
-        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M16 14.6652L11.0785 9.73294C11.9827 8.48188 12.3826 6.93501 12.1984 5.40134C12.0141 3.86767 11.2594 2.4601 10.0848 1.45982C8.91022 0.45954 7.40233 -0.0598191 5.86234 0.00548954C4.32234 0.0707982 2.86363 0.715967 1.77757 1.81212C0.691516 2.90827 0.0580813 4.3747 0.0038002 5.91849C-0.050481 7.46228 0.478388 8.96976 1.48476 10.1398C2.49113 11.3098 3.90092 12.0563 5.43251 12.2301C6.96409 12.4039 8.50472 11.9922 9.74663 11.0772L14.6586 16L16 14.6652ZM6.08152 10.3767C5.24079 10.3767 4.41895 10.1268 3.71991 9.65874C3.02087 9.19063 2.47604 8.5253 2.15431 7.74687C1.83258 6.96844 1.7484 6.11188 1.91241 5.28551C2.07643 4.45913 2.48128 3.70006 3.07576 3.10427C3.67024 2.50849 4.42766 2.10276 5.25223 1.93838C6.0768 1.77401 6.93149 1.85837 7.70822 2.1808C8.48495 2.50324 9.14883 3.04927 9.61591 3.74983C10.083 4.4504 10.3323 5.27404 10.3323 6.11661C10.3298 7.24568 9.88115 8.3278 9.08451 9.12618C8.28788 9.92456 7.20813 10.3742 6.08152 10.3767Z" fill="white" />
-        </svg>
       </a>
       <form class="popup search-form" action="https://echo.htmlacademy.ru/courses" method="post">
         <label class="visually-hidden" for="search" >Строка поиска</label>
@@ -61,10 +58,7 @@
     <section class="form-login">
       <h2 class="visually-hidden">Форма входа</h2>
       <a class="btn-login" href="#">
-        <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M6.04 14.88L12.96 9.5L6.04 4.13V7.04H0V11.96H6.04V14.88Z" fill="white" />
-          <path d="M18 0H5C4.46957 0 3.96086 0.210714 3.58579 0.585786C3.21071 0.960859 3 1.46957 3 2V4H5V2H18V17H5V15H3V17C3 17.5304 3.21071 18.0391 3.58579 18.4142C3.96086 18.7893 4.46957 19 5 19H18C18.5304 19 19.0391 18.7893 19.4142 18.4142C19.7893 18.0391 20 17.5304 20 17V2C20 1.46957 19.7893 0.960859 19.4142 0.585786C19.0391 0.210714 18.5304 0 18 0Z" fill="white" />
-        </svg>
+        <div class="btn-login-img"></div>
         <span>Вход</span>
       </a>
       <form class="popup login-form" action="https://echo.htmlacademy.ru/courses" method="post">
@@ -93,15 +87,13 @@
           </svg>
         <span>2 товара</span>
       </a>
-      </div>
       <form class="popup form-order" action="https://echo.htmlacademy.ru/courses" method="post">
         <h2 class="visually-hidden">Корзина с мороженым</h2>
         <ul class="form-order-list">
           <li class="form-order-item">
-            <div class="btn-delete">
+            <button class="btn-delete">
               <span class="visually-hidden">Удалить товар </span>
-              <img src="img/main/button-close.svg" alt="Кнопка для удаления товара" width="11" height="11">
-            </div>
+            </button>
             <a href="#">
               <img src="img/main/products/ic-orange.png" alt="Картинка мороженого пломбир с апельсиновым джемом"
                 width="32" height="32" />
@@ -110,23 +102,23 @@
             <span class="form-order-weight">1,5 кг x <span class="form-order-sum">200 руб.</span></span>
             <span class="form-ice-sum">300 руб.</span>
           </li>
-          <li>
-            <div class="btn-delete">
+          <li class="form-order-item">
+            <button class="btn-delete">
               <span class="visually-hidden">Удалить товар </span>
-              <img src="img/main/button-close.svg" alt="Кнопка для удаления товара" width="11" height="11">
-            </div>
+            </button>
             <a href="#">
               <img src="img/main/products/ic-strawberry.png"
                 alt="Картинка мороженого клубничный пломбир с присыпкой из белого шоколада" width="32" height="32" />
             </a>
             <h3 class="form-order-ice">Клубничный пломбир с присыпкой из белого шоколада</h3>
-            <span class="form-order-weight">1,5 кг x <span class="form-order-sum">200 руб.</span></span>
-            <span class="form-ice-sum">300 руб.</span>
+            <span class="form-order-weight">1,5 кг x <span class="form-order-sum">300 руб.</span></span>
+            <span class="form-ice-sum">450 руб.</span>
           </li>
         </ul>
         <span class="form-order-total">Итого: 750 руб.</span>
         <button class="button btn-checkout" type="submit">Оформить заказ</button>
       </form>
+      </div>
     </section>
 
   </header>
@@ -219,7 +211,7 @@
             <p class="catalog-item-price">310 &#8381; <span>/кг</span></p>
           </div>
           <h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
-          <a class="button btn-ice" href="#" >Быстрый просмотр</a>
+          <a class="button btn-ice" href="#">Быстрый просмотр</a>
         </li>
         <li class="catalog-item">
           <div class="catalog-item-ice catalog-item-coffee">
@@ -233,7 +225,7 @@
             <p class="catalog-item-price">355 &#8381; <span>/кг</span></p>
           </div>
           <h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
-          <a class="button btn-ice" href="#" >Быстрый просмотр</a>
+          <a class="button btn-ice" href="#">Быстрый просмотр</a>
         </li>
         <li class="catalog-item">
           <div class="catalog-item-ice catalog-item-brulee">
@@ -247,14 +239,14 @@
             <p class="catalog-item-price">325 &#8381; <span>/кг</span></p>
           </div>
           <h3>Сливочное с брусничным джемом</h3>
-          <a class="button btn-ice" href="#" >Быстрый просмотр</a>
+          <a class="button btn-ice" href="#">Быстрый просмотр</a>
         </li>
         <li class="catalog-item">
           <div class="catalog-item-ice catalog-item-blueberries">
             <p class="catalog-item-price">410 &#8381; <span>/кг</span></p>
           </div>
           <h3>Сливочно-черничное с цельными ягодами черники</h3>
-          <a class="button btn-ice" href="#" >Быстрый просмотр</a>
+          <a class="button btn-ice" href="#">Быстрый просмотр</a>
         </li>
         <li class="catalog-item">
           <div class="catalog-item-ice catalog-item-lemon">
@@ -312,11 +304,10 @@
         <li class="pagination-item-next"><a href="#"></a></li>
       </ul>
     </div>
-
-
   </main>
-  <footer class="container footer">
-    <div class="line"></div>
+
+  <footer class="container footer footer-line">
+
     <section class="social">
       <h2 class="visually-hidden">Социальные сети</h2>
       <ul class="social-list">
@@ -395,6 +386,7 @@
         © 2019
       </p>
     </section>
+
   </footer>
 </body>
 
