Fix by comments

--- a/catalog.html
+++ b/catalog.html
@@ -91,7 +91,7 @@
         <h2 class="visually-hidden">Корзина с мороженым</h2>
         <ul class="form-order-list">
           <li class="form-order-item">
-            <button class="btn-delete">
+            <button class="btn-delete" type="button">
               <span class="visually-hidden">Удалить товар </span>
             </button>
             <a href="#">
@@ -103,7 +103,7 @@
             <span class="form-ice-sum">300 руб.</span>
           </li>
           <li class="form-order-item">
-            <button class="btn-delete">
+            <button class="btn-delete" type="button">
               <span class="visually-hidden">Удалить товар </span>
             </button>
             <a href="#">
