--- a/index.html
+++ b/index.html
@@ -10,25 +10,6 @@
 </head>
 
 <body class="page-body">
-  <div id="modal" class="feedback-form-wrapper">
-    <form class="feedback-form" action="https://echo.htmlacademy.ru/courses" method="post">
-      <button class="btn-feedback-close">
-        <svg onclick='document.getElementById("modal").style.display="none"' width="18" height="17" viewBox="0 0 18 17"
-          fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M18 1.4175L16.4885 0L8.99468 7.07747L1.50089 0L0 1.4175L7.49379 8.49497L0 15.5724L1.50089 17L8.99468 9.92253L16.4885 17L18 15.5724L10.5062 8.49497L18 1.4175Z" fill="#231F20" />
-        </svg>
-      </button>
-      <h2 class="visually-hidden"> Форма обратной связи </h2>
-      <h3 class="feedback-form-title">Мы обязательно вам ответим!</h3>
-      <label for="user-name" class="visually-hidden"> Имя и фамилия</label>
-      <input class="feedback-form-input" type="text" name="name" id="user-name" placeholder="Имя Фамилия" required>
-      <label for="user-email" class="visually-hidden">Электронная почта</label>
-      <input class="feedback-form-input" type="email" id="user-email" name="email" placeholder="email@example.com" required>
-      <label for="user-text" class="visually-hidden">Дополнительная информация</label>
-      <textarea class="feedback-form-text" id="user-text" name="text" rows="7" placeholder="В свободной форме" required></textarea>
-      <button class="button btn-feedback" type="submit">Отправить</button>
-    </form>
-  </div>
   <header class="main-header container">
     <nav class="main-nav">
       <a class="main-logo" href="index.html" >
@@ -362,6 +343,26 @@
       </p>
     </section>
   </footer>
+
+  <div class="feedback-form-wrapper active" id="modal">
+    <form class="feedback-form" action="https://echo.htmlacademy.ru/courses" method="post">
+      <button class="btn-feedback-close">
+        <svg onclick='document.getElementById("modal").style.display="none"' width="18" height="17" viewBox="0 0 18 17"
+          fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M18 1.4175L16.4885 0L8.99468 7.07747L1.50089 0L0 1.4175L7.49379 8.49497L0 15.5724L1.50089 17L8.99468 9.92253L16.4885 17L18 15.5724L10.5062 8.49497L18 1.4175Z" fill="#231F20" />
+        </svg>
+      </button>
+      <h2 class="visually-hidden"> Форма обратной связи </h2>
+      <h3 class="feedback-form-title">Мы обязательно вам ответим!</h3>
+      <label class="visually-hidden" for="user-name" > Имя и фамилия</label>
+      <input class="feedback-form-input" type="text" name="name" id="user-name" placeholder="Имя Фамилия" required>
+      <label class="visually-hidden" for="user-email">Электронная почта</label>
+      <input class="feedback-form-input" type="email" id="user-email" name="email" placeholder="email@example.com" required>
+      <label class="visually-hidden" for="user-text">Дополнительная информация</label>
+      <textarea class="feedback-form-text" id="user-text" name="text" rows="7" placeholder="В свободной форме" required></textarea>
+      <button class="button btn-feedback" type="submit">Отправить</button>
+    </form>
+  </div>
 </body>
 
 </html>
