Add decorative elements index.html

--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body class="page-body">
+<body class="page-body  main-slide-first">
   <header class="main-header container">
     <nav class="main-nav">
       <a class="main-logo" href="index.html" >
