--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body class="page-body">
+<body class="page-body main-slide-first">
   <header class="main-header container">
     <nav class="main-nav">
       <a class="main-logo" href="index.html" >
@@ -111,26 +111,26 @@
       <h2 class="visually-hidden">Самое популярное мороженое</h2>
       <div class="main-slide">
         <div class="main-slide-item active">
-          <h3>Крем-брюле и пломбир с малиновым джемом</h3>
+          <h3 class="main-slide-title">Крем-брюле и пломбир с малиновым джемом</h3>
           <a class="button btn-double-order" href="#">Давайте оба!</a>
         </div>
         <div class="main-slide-item">
-          <h3>Шоколадный пломбир и лимонный сорбет</h3>
+          <h3  class="main-slide-title">Шоколадный пломбир и лимонный сорбет</h3>
           <a class="button btn-double-order" href="#">Давайте оба!</a>
         </div>
         <div class="main-slide-item">
-          <h3>Пломбир с помадкой и клубничный щербет</h3>
+          <h3  class="main-slide-title">Пломбир с помадкой и клубничный щербет</h3>
           <a class="button btn-double-order" href="#">Давайте оба!</a>
         </div>
         <ul class="slide-buttons">
           <li class="slide-button">
-            <button class="btn-slide"><span class="visually-hidden">Слайд 1</span></button>
+            <button class="btn-slide current" aria-label="Первый слайд"></button>
           </li>
           <li class="slide-button">
-           <button class="btn-slide"><span class="visually-hidden">Слайд 2</span></button>
+           <button class="btn-slide" aria-label="Второй слайд"></button>
           </li>
           <li class="slide-button">
-           <button class="btn-slide"><span class="visually-hidden">Слайд 3</span></button>
+           <button class="btn-slide" aria-label="Третий слайд"></button>
           </li>
         </ul>
       </div>
@@ -161,32 +161,33 @@
       <ul class="catalog-list">
         <li class="catalog-item">
           <div class="catalog-item-ice catalog-item-orange">
-            <div class="catalog-item-hit"></div>
             <p>310 &#8381;<span>/кг</span></p>
+            <div class="catalog-item-hit"></div>
+
           </div>
           <h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
           <a class="button btn-ice" href="#">Быстрый просмотр</a>
         </li>
         <li class="catalog-item">
           <div class="catalog-item-ice catalog-item-coffee">
-            <div class="catalog-item-hit"></div>
             <p>380 &#8381;<span>/кг</span></p>
+            <div class="catalog-item-hit"></div>
           </div>
           <h3>Сливочно-кофейное с кусочками шоколада</h3>
           <a class="button btn-ice" href="#">Быстрый просмотр</a>
         </li>
         <li class="catalog-item">
           <div class="catalog-item-ice catalog-item-strawberry">
-            <div class="catalog-item-hit"></div>
             <p>355 &#8381;<span>/кг</span></p>
+            <div class="catalog-item-hit"></div>
           </div>
           <h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
           <a class="button btn-ice" href="#">Быстрый просмотр</a>
         </li>
         <li class="catalog-item">
           <div class="catalog-item-ice catalog-item-brulee">
-            <div class="catalog-item-hit"></div>
             <p>415 &#8381;<span>/кг</span></p>
+            <div class="catalog-item-hit"></div>
           </div>
           <h3>Сливочное крем-брюле с карамельной подливкой</h3>
           <a class="button btn-ice" href="#">Быстрый просмотр</a>
@@ -246,26 +247,29 @@
       </p>
       <form class="subscription-form" action="https://echo.htmlacademy.ru/courses" method="post">
         <input type="email" placeholder="email@example.com" required>
-        <button class="button" type="submit">Отправить</button>
+        <button class="button btn-send" type="submit">Отправить</button>
       </form>
     </section>
   </div>
 
     <section class="contact">
+
+      <h2 class="visually-hidden">Где мы находимся?</h2>
       <div class="container contact-inner">
-        <h2 class="visually-hidden">Где мы находимся?</h2>
         <img class="contact-img" src="./img/main/pin.png" alt="Месторасположение магазина мороженого" width="80" height="140">
+
         <div  class="contact-info">
           <h2 class="visually-hidden">Наш адрес</h2>
-          <p>Адрес главного офиса и офлайн-магазина:</p>
-          <a>ул. Большая Конюшенная, 19/8, Санкт-Петербург</a>
-          <p>Для заказов по телефону:</p>
-          <a href="tel:88124502525">8 812 450-25-25</a>
-          <p>(с 10 до 20 ежедневно)</p>
+          <p class="contact-info-headquoter">Адрес главного офиса </br> и офлайн-магазина:</p>
+          <a class="contact-info-adress">ул. Большая Конюшенная, 19/8, Санкт-Петербург</a>
+          <p class="contact-order-phone">Для заказов по телефону:</p>
+          <a class="contact-phone-number" href="tel:88124502525">8 812 450-25-25</a>
+          <p class="contact-schedule">(с 10 до 20 ежедневно)</p>
           <button class="button btn-contact">Форма обратной связи</button>
         </div>
       </div>
-
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.60362530567!2d30.320853351673644!3d59.93871916896525!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sby!4v1593637858210!5m2!1sru!2sby" width="100%" height="430">
+      </iframe>
     </section>
   </main>
 
