--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body class="page-body  main-slide-first">
+<body class="page-body">
   <header class="main-header container">
     <nav class="main-nav">
       <a class="main-logo" href="index.html" >
@@ -146,37 +146,38 @@
       <h1 class="main-title">Cливочное мороженое</h1>
       <h2 class="visually-hidden">Форма дополнительных параметров</h2>
       <form class="filters" action="https://echo.htmlacademy.ru/courses" method="post">
-        <fieldset>
+        <fieldset class="filters-sort">
           <legend class="filters-name">Сортировка</legend>
-          <section class="filters-parameters">
-            <option class="filters-parameter">по популярности</option>
-            <option class="filters-parameter">сначала недорогие</option>
-            <option class="filters-parameter">сначала дорогие</option>
-            <option class="filters-parameter">по жирности</option>
-          </section>
+          <select class="filters-parameters" >
+            <option class="filters-parameter" value="popular">по популярности</option>
+            <option class="filters-parameter" value="cheap">сначала недорогие</option>
+            <option class="filters-parameter" value="expensive">сначала дорогие</option>
+            <option class="filters-parameter" value="fat">по жирности</option>
+          </select>
         </fieldset>
         <fieldset class="filters-price">
           <legend class="filters-name">
-            <span>Цена: 100 &#8381; - 500 &#8381;</span>
+            <span class="filters-name-price">Цена: 100 &#8381; - 500 &#8381;</span>
           </legend>
+          <div class="filters-price-slider"></div>
         </fieldset>
         <fieldset>
           <legend class="filters-name">Жирность</legend>
           <ul class="filters-fat-list">
-            <li>
-              <input type="radio" name="fat" id="nofat" />
+            <li class="filter-option filter-radio">
+              <input class="visually-hidden filter-radio-input" type="radio" name="fat" id="nofat" />
               <label class="filters-parameter" for="nofat">0%</label>
             </li>
-            <li>
-              <input type="radio" name="fat" id="light" />
+            <li class="filter-option filter-radio">
+              <input class="visually-hidden filter-radio-input" checked="checked" type="radio" name="fat" id="light" />
               <label class="filters-parameter" for="light">до 10%</label>
             </li>
-            <li>
-              <input type="radio" name="fat" id="medium" />
+            <li class="filter-option filter-radio">
+              <input  class="visually-hidden filter-radio-input" type="radio" name="fat" id="medium" />
               <label class="filters-parameter" for="medium">до 30%</label>
             </li>
-            <li>
-              <input type="radio" name="fat" id="hight" />
+            <li class="filter-option filter-radio">
+              <input class="visually-hidden filter-radio-input" type="radio" name="fat" id="hight" />
               <label class="filters-parameter" for="hight">выше 30%</label>
             </li>
           </ul>
@@ -184,24 +185,24 @@
         <fieldset>
           <legend class="filters-name">Наполнители:</legend>
           <ul class="filters-type-list">
-            <li>
-              <input type="checkbox" name="name" id="chocolate" />
+            <li class="filter-option filter-checkbox">
+              <input class="visually-hidden filter-checkbox-input" checked="checked" type="checkbox" name="name" id="chocolate" />
               <label class="filters-parameter" for="chocolate">шоколадные</label>
             </li>
-            <li>
-              <input type="checkbox" name="name" id="sugar" />
+            <li class="filter-option filter-checkbox">
+              <input class="visually-hidden filter-checkbox-input" checked="checked" type="checkbox" name="name" id="sugar" />
               <label class="filters-parameter" for="sugar">сахарные присыпки</label>
             </li>
-            <li>
-              <input type="checkbox" name="name" id="fruits" />
+            <li class="filter-option filter-checkbox">
+              <input class="visually-hidden filter-checkbox-input" type="checkbox" name="name" id="fruits" />
               <label class="filters-parameter" for="fruits">фрукты</label>
             </li>
-            <li>
-              <input type="checkbox" name="name" id="syrup" />
+            <li class="filter-option filter-checkbox">
+              <input class="visually-hidden filter-checkbox-input" type="checkbox" name="name" id="syrup" />
               <label class="filters-parameter" for="syrup">сиропы</label>
             </li>
-            <li>
-              <input type="checkbox" name="name" id="jams" />
+            <li class="filter-option filter-checkbox">
+              <input class="visually-hidden filter-checkbox-input" type="checkbox" name="name" id="jams" />
               <label class="filters-parameter" for="jams">джемы</label>
             </li>
           </ul>
